[project]
name = "bach-active_jobs_db"
version = "1.0.0"
description = "RapidAPI: fantastic-jobs-fantastic-jobs-default/active-jobs-db"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_active_jobs_db = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-active_jobs_db"
Repository = "https://github.com/bachstudio/bach-active_jobs_db"
Documentation = "https://github.com/bachstudio/bach-active_jobs_db#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'